overflow fixed

--- a/style.css
+++ b/style.css
@@ -58,6 +58,7 @@ ul li a:hover {
 /* doc */
 .doc {
     padding: 50px 20px 0;
+    overflow: hidden;
 }
 
 .doc h1 {
